# pedra-python

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pedra/: __init__.py  client.py  errors.py  models.py
tests/: test_client.py
