[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pedra"
version = "0.2.0"
description = "Official Python SDK for the Pedra API — AI photo editing for real estate (virtual staging, renovation, enhancement, video)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Pedra", email = "felix@pedra.ai" }]
keywords = [
    "pedra",
    "real-estate",
    "proptech",
    "virtual-staging",
    "home-staging",
    "renovation",
    "interior-design",
    "ai",
    "image-editing",
    "real-estate-photography",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]
dependencies = ["certifi"]

[project.urls]
Homepage = "https://pedra.ai"
Documentation = "https://pedra.ai/api-documentation"
Repository = "https://github.com/pedra-ai/pedra-python"
Issues = "https://github.com/pedra-ai/pedra-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pedra"]
